# mimic-visual

./: README.md
Mimic-Visual/: Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  mimic-visual.txt  pyproject.toml  visrag.yaml
Mimic-Visual/src/visrag/: __init__.py
Mimic-Visual/src/visrag/chunk/: __init__.py  base.py  geometric.py
Mimic-Visual/src/visrag/cli/: chunk_cmd.py  embed_cmd.py  extract_cmd.py  index_cmd.py  main.py  recon_cmd.py  render_cmd.py  serve_cmd.py
Mimic-Visual/src/visrag/config/: defaults.yaml  settings.py
Mimic-Visual/src/visrag/core/: chunk.py  document.py  embedding.py  fusion.py  query.py  render.py  sdm.py
Mimic-Visual/src/visrag/embed/: base.py  hybrid.py  layout_aware.py  registry.py  text_only.py
Mimic-Visual/src/visrag/extract/: __init__.py  aligner.py  fusion_engine.py  html_parser.py  layout_analyzer.py  sdm_builder.py  table_detector.py
Mimic-Visual/src/visrag/extract/ocr/: base.py  doctr.py  easyocr.py  surya.py
Mimic-Visual/src/visrag/index/: __init__.py  base.py  builder.py  faiss_index.py  metadata_store.py
Mimic-Visual/src/visrag/reconstruct/: __init__.py  base.py  html_reconstructor.py  svg_reconstructor.py  text_reconstructor.py
Mimic-Visual/src/visrag/render/: __init__.py  base.py  cdp.py  playwright.py
Mimic-Visual/src/visrag/serve/: __init__.py  api.py  query_encoder.py
Mimic-Visual/src/visrag/serve/routes/: __init__.py  reconstruct.py  search.py  status.py
Mimic-Visual/src/visrag/sources/: __init__.py  base.py  image.py  local.py  pdf.py  web.py
